Day 23 refactor